--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,12 @@
       <div class="header_section">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <a class="navbar-brand"href="index.html"><img src="images/logo.png"></a>
+               <a class="navbar-brand" href="index.html">
+                  <h3>Law Office of</h3>
+                  <h1>Tusca R.S. Alexis</h1>
+                  <h3>Mediation Training and Services</h3>
+                  <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
+               </a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
@@ -132,7 +137,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2024 All Rights Reserved.</p>
+            <p class="copyright_text">© 2024 All Rights Reserved.</p>
          </div>
       </div>
       <!-- copyright section end -->
