--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
                         <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment"
-                           name="Massage"></textarea>
+                        <textarea class="massage-bt" placeholder="Message" rows="5" id="comment"
+                           name="Message"></textarea>
                         <div class="send_bt active"><a href="#">Send Now</a></div>
                      </form>
                   </div>
