--- a/contact.html
+++ b/contact.html
@@ -59,14 +59,6 @@
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                     <div class="login_bt">
-                        <ul>
-                           <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
-                           <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                        </ul>
-                     </div>
-                  </form>
                </div>
             </nav>
          </div>
@@ -88,7 +80,7 @@
                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number"> 
                         <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                        <textarea class="message-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea>
                         <div class="send_bt active"><a href="#">Send Now</a></div>
                         </form>
                      </div>
