--- a/training.html
+++ b/training.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>About Tusca R.S. Alexis</title>
+      <title>Mediation Training | Law Office of Tusca R.S. Alexis</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -52,10 +52,10 @@
                         <a class="nav-link" href="about.html">About</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="mediation.html">Mediation</a>
+                        <a class="nav-link" href="practice-areas.html">Practice Areas</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="practice-areas.html">Practice Areas</a>
+                        <a class="nav-link" href="mediation.html">Mediation</a>
                      </li>
                      <li class="nav-item active">
                         <a class="nav-link" href="training.html">Mediation Training</a>
