--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Contact</title>
+      <title>Contact | Law Office of Tusca R.S. Alexis</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -44,21 +44,24 @@
                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                         <a class="nav-link" href="about.html">About</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="mediation.html">Mediation</a>
+                         <a class="nav-link" href="practice-areas.html">Practice Areas</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="training.html">Training</a>
+                         <a class="nav-link" href="mediation.html">Mediation</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="training.html">Mediation Training</a>
                      </li>
                      <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                  </ul>
+                 </ul>
                </div>
             </nav>
          </div>
@@ -69,7 +72,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <h1 class="contact_taital">Free Consulation</h1>
+                  <h1 class="contact_taital">Have any questions?</h1>
                </div>
             </div>
             <div class="contact_section_2">
@@ -80,7 +83,7 @@
                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number"> 
                         <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                        <textarea class="massage-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea>
+                        <textarea class="message-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea>
                         <div class="send_bt active"><a href="#">Send Now</a></div>
                         </form>
                      </div>
@@ -90,58 +93,58 @@
          </div>
       </div>
       <!-- contact section end -->
-      <!-- footer section start -->
-      <div class="footer_section layout_padding">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
+         <!-- Footer Section -->
+    <div class="footer_section layout_padding">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-12">
                   <div class="location_text">
-                     <ul>
-                        <li>
-                           <a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                           <a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                           <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                        </li>
-                     </ul>
+                      <ul>
+                          <li>
+                              <a target="_new"
+                                  href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/">
+                                  <i class="fa fa-map-marker" aria-hidden="true"></i></a>
+                          </li>
+                          <li>
+                              <a href="tel:615-828-4087"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                          </li>
+                          <li>
+                              <a href="mailto:alexislawfirm@aol.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                          </li>
+                      </ul>
                   </div>
-               </div>
-               <div class="footer_logo"><a class="navbar-brand" href="index.html">
-                  <h3>Law Office of</h3>
-                  <h1>Tusca R.S. Alexis</h1>
-                  <h3>Mediation Training and Services</h3>
-                  <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
-               </a></div>
-               <div class="social_icon">
+              </div>
+              <div class="footer_logo">
+                  <a class="navbar-brand" href="index.html">
+                      <h3>Law Office of</h3>
+                      <h1>Tusca R.S. Alexis</h1>
+                      <h3>Mediation Training and Services</h3>
+                  </a>
+              </div>
+              <div class="social_icon">
                   <ul>
-                     <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.facebook.com/p/Tusca-Alexis-61551910778340/" target="_blank"><i
+                                  class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.instagram.com/tuscaalexis4judge/" target="_blank"><i
+                                  class="fa fa-instagram" aria-hidden="true"></i></a></li>
                   </ul>
-               </div>
-            </div>
-         </div>
+              </div>
+          </div>
       </div>
-      <!-- footer section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
-         <div class="container">
-            <p class="copyright_text">© 2024 All Rights Reserved.</p>
-         </div>
+  </div>
+
+  <!-- Copyright Section -->
+  <div class="copyright_section">
+      <div class="container">
+          <p class="copyright_text">© 2024 All Rights Reserved.</p>
       </div>
-      <!-- copyright section end -->
-      <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
-      <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
-      <!-- javascript --> 
-   </body>
+  </div>
+
+  <!-- Javascript Files -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/custom.js"></script>
+</body>
+
 </html>
