--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                      <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="mediation.html">Mediation</a>
+                     <a class="nav-link" href="practice-areas.html">Practice Areas</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="practice-areas.html">Practice Areas</a>
+                     <a class="nav-link" href="mediation.html">Mediation</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="training.html">Mediation Training</a>
@@ -195,7 +195,7 @@
                      </div>
                      <div class="box_right">
                         <p class="book_text active">Get a Free</p>
-                        <h4 class="appoinment_text active"> Consulation</h4>
+                        <h4 class="appoinment_text active"> Consultation</h4>
                      </div>
                   </div>
                </a>
@@ -473,7 +473,7 @@
       <div class="container">
          <div class="row">
             <div class="col-sm-12">
-               <h1 class="contact_taital">Free Consulation</h1>
+               <h1 class="contact_taital">Free Consultation</h1>
             </div>
          </div>
          <div class="contact_section_2">
@@ -484,7 +484,7 @@
                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
                         <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
-                        <textarea class="massage-bt" placeholder="Message" rows="5" id="comment"
+                        <textarea class="message-bt" placeholder="Message" rows="5" id="comment"
                            name="Message"></textarea>
                         <div class="send_bt active"><a href="#">Send Now</a></div>
                      </form>
@@ -540,7 +540,7 @@
    <!-- copyright section start -->
    <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">© 2024 All Rights Reserved.</p>
+         <p class="copyright_text">© 2024 Tusca R.S. Alexis, Attorney at Law. All Rights Reserved.</p>
       </div>
    </div>
    <!-- copyright section end -->
