--- a/headerfooter.html
+++ b/headerfooter.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <title>About | Law Office of Tusca R. S. Alexis</title>
+      <title>Law Office of Tusca R. S. Alexis</title>
       <meta name="keywords" content="mediation, training, law, Tennessee, mediator">
       <meta name="description"
          content="Professional mediation training and legal services in Nashville, Tennessee. Learn to mediate effectively with Alexis Mediation.">
@@ -19,10 +19,11 @@
       <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+      
       <link rel="icon" href="/images/Alexis Mediation Icon.png" type="image/x-icon">
    </head>
    <body>
-      <div class="header_section container"  style="padding-top: 120px">
+      <div class="header_section parallax-section"  style="padding-top: 120px">
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light float-right">
                <a class="navbar-brand" href="./">
@@ -39,7 +40,7 @@
                      <li class="nav-item">
                         <a class="nav-link" href="./">Home</a>
                      </li>
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="/about.html">About</a>
                      </li>
                      <li class="nav-item dropdown">
@@ -75,23 +76,6 @@
             </nav>
          </div>
          </div>
-
-      <div class="about_section layout_padding" style="min-height: 85vh;">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="about_img"><img src="images/Tusca-R.-S.-Alexis_nobg.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <div class="about_text_main">
-                     <h1 class="about_taital">Tusca R.S. Alexis</h1>
-                     <p class="about_text">Tusca R.S. Alexis is a practicing attorney in Tennessee and a Rule 31-listed family and civil mediator, with specialized training in domestic violence. She earned her undergraduate degree from Adelphi University in Long Island, New York, in 1986, and her law degree from Drake University School of Law in Des Moines, Iowa, in 1989. Ms. Alexis has been practicing law since 1990, focusing on family law, personal injury, and criminal law. She is also a proud member of the Tennessee Bar Association's Alternative Dispute Resolution Section.</p>
-                     <div class="readmore_bt"><a href="moreabout.html">Read More</a></div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
 
       <div class="footer_section layout_padding">
          <div class="container">
@@ -144,7 +128,7 @@
       
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">© 2024 All Rights Reserved.</p>
+            <p class="copyright_text">© 2024 All Rights Reserved. Developed with ❤️ by <a href="https://yourwebsite.com" target="_blank">Miguel De Jesus</a>.</p>
          </div>
       </div>
 
