--- a/moreabout.html
+++ b/moreabout.html
@@ -2,36 +2,26 @@
 <html>
 
 <head>
-    <!-- basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- mobile metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
-    <title>About Tusca R.S. Alexis</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- bootstrap css -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Law Office of Tusca R. S. Alexis | Attorney at Law & Mediator</title>
+    <meta name="keywords" content="mediation, training, law, Tennessee, mediator">
+    <meta name="description"
+       content="Professional mediation training and legal services in Tennessee. Learn to mediate effectively with Alexis Mediation.">
+    <meta name="author" content="Alexis Mediation">
+ 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <!-- style css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- Responsive-->
+ 
     <link rel="stylesheet" href="css/responsive.css">
-    <!-- fevicon -->
+ 
     <link rel="icon" href="images/fevicon.png" type="image/gif" />
-    <!-- font css -->
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
-    <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-    <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <style>
-
-    </style>
-</head>
+    <link rel="icon" href="/images/Alexis Mediation Icon.png" type="image/x-icon">
+ </head>
 
 <body>
     <div class="header_section">
@@ -56,10 +46,10 @@
                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                       <a class="nav-link" href="mediation.html">Mediation</a>
+                        <a class="nav-link" href="practice-areas.html">Practice Areas</a>
                     </li>
                     <li class="nav-item">
-                       <a class="nav-link" href="practice-areas.html">Practice Areas</a>
+                       <a class="nav-link" href="mediation.html">Mediation</a>
                     </li>
                     <li class="nav-item">
                        <a class="nav-link" href="training.html">Mediation Training</a>
