--- a/training.html
+++ b/training.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>Mediation Training | Law Office of Tusca R.S. Alexis</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- bootstrap css -->
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <title>Law Office of Tusca R. S. Alexis | Attorney at Law & Mediator</title>
+      <meta name="keywords" content="mediation, training, law, Tennessee, mediator">
+      <meta name="description"
+         content="Professional mediation training and legal services in Tennessee. Learn to mediate effectively with Alexis Mediation.">
+      <meta name="author" content="Alexis Mediation">
+   
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-      <!-- style css -->
       <link rel="stylesheet" type="text/css" href="css/style.css">
-      <!-- Responsive-->
+   
       <link rel="stylesheet" href="css/responsive.css">
-      <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif">
-      <!-- font css -->
-      <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&amp;display=swap" rel="stylesheet">
-      <!-- Scrollbar Custom CSS -->
+   
+      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-      <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+      <link rel="icon" href="/images/Alexis Mediation Icon.png" type="image/x-icon">
    </head>
   
    <body>
@@ -88,7 +81,7 @@
                         <h3 class="introduction_text">Family Training</h3>
                         <p>A comprehensive 46-hour course on family mediation practices and techniques.</p>
                      </div>
-                     <div class="read_bt"><a href="family-mediation-training.html">Learn More</a></div>
+                     <div class="read_bt"><a href="/training/family-mediation-training.html">Learn More</a></div>
                   </div>
                   <!-- Civil Mediation Training -->
                   <div class="col-md-4">
@@ -99,7 +92,7 @@
                         <h3 class="introduction_text">Civil Training</h3>
                         <p>A 40-hour program focusing on civil dispute mediation.</p>
                      </div>
-                     <div class="read_bt"><a href="civil-mediation-training.html">Learn More</a></div>
+                     <div class="read_bt"><a href="/training/civil-mediation-training.html">Learn More</a></div>
                   </div>
                   <!-- Family to Civil Mediation Training -->
                   <div class="col-md-4">
@@ -110,7 +103,7 @@
                         <h3 class="introduction_text">Family to Civil Training</h3>
                         <p>A 16-hour training transitioning from family to civil mediation.</p>
                      </div>
-                     <div class="read_bt"><a href="family-civil-mediation-training.html">Learn More</a></div>
+                     <div class="read_bt"><a href="/training/family-civil-mediation-training.html">Learn More</a></div>
                   </div>
                </div>
                <div class="row">
@@ -123,7 +116,7 @@
                         <h3 class="introduction_text">Civil to Family Training</h3>
                         <p>A 30-hour course designed to move from civil to family mediation.</p>
                      </div>
-                     <div class="read_bt"><a href="#">Learn More</a></div>
+                     <div class="read_bt"><a href="/training/civil-family-mediation-training.html">Learn More</a></div>
                   </div>
                   <!-- Domestic Violence Training -->
                   <div class="col-md-4">
@@ -134,7 +127,7 @@
                         <h3 class="introduction_text">Domestic Violence Training</h3>
                         <p>A 12-hour program addressing mediation in domestic violence cases.</p>
                      </div>
-                     <div class="read_bt"><a href="#">Learn More</a></div>
+                     <div class="read_bt"><a href="/training/domestic-violence-mediation-training.html">Learn More</a></div>
                   </div>
                </div>
             </div>
