--- a/practiceAreas/immigration-law.html
+++ b/practiceAreas/immigration-law.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./">Home</a>
+                            <a class="nav-link" href="../">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about.html">About</a>
@@ -58,10 +58,10 @@
         </div>
     </div>  
     
-    <section class="divorce-content container my-5">
-        <h2>Divorce & Post-Divorce Services</h2>
-        <p>Attorney Alexis provides comprehensive divorce and post-divorce legal services to help clients through these life changes...</p>
-        <!-- Additional content specific to divorce and post-divorce -->
+    <section class="immigration-law-content container my-5 layout_padding">
+        <h2>Immigration Law Services</h2>
+        <p>Attorney Tusca R.S. Alexis provides comprehensive immigration legal services, guiding clients through the complex processes of visa applications, green cards, naturalization, and citizenship. With a thorough understanding of immigration law, she is committed to supporting clients in achieving their goals and securing their future in the United States.</p>
+        <!-- Additional content specific to immigration law -->
     </section>
 
     <div class="footer_section layout_padding">
