--- a/practiceAreas/mediation.html
+++ b/practiceAreas/mediation.html
@@ -22,59 +22,41 @@
       <link rel="icon" href="/images/Alexis Mediation Icon.png" type="image/x-icon">
    </head>
    <body>
-      <div class="header_section parallax-section"  style="padding-top: 120px">
+      <div class="header_section" style="padding-top: 120px;">
          <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right">
-               <a class="navbar-brand" href="./">
-                  <h3>Law Office of</h3>
-                  <h1>Tusca R.S. Alexis</h1>
-                  <h3>Attorney at Law & Mediator</h3>
-               </a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ml-auto">
-                     <li class="nav-item">
-                        <a class="nav-link" href="./">Home</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
-                     </li>
-                     <li class="nav-item dropdown active">
-                        <a class="nav-link dropdown-toggle" href="practice-areas.html" id="practiceAreasDropdown"
-                           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Practice
-                           Areas</a>
-                        <div class="dropdown-menu" aria-labelledby="practiceAreasDropdown">
-                           <a href="practiceAreas/family-law.html" class="dropdown-item">Family</a>
-                           <a href="practiceAreas/divorce.html" class="dropdown-item">Divorce & Post-Divorce</a>
-                           <a href="practiceAreas/custody.html" class="dropdown-item">Custody</a>
-                           <a href="practiceAreas/civil.html" class="dropdown-item">Civil</a>
-                           <a href="practiceAreas/criminal.html" class="dropdown-item">Criminal</a>
-                           <a href="practiceAreas/mediation.html" class="dropdown-item">Mediation</a>
-                        </div>
-                     </li>
-                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="training.html" id="mediationDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mediation Training</a>
-                        <div class="dropdown-menu" aria-labelledby="mediationDropdown">
-                           <a href="training/family-mediation-training.html" class="dropdown-item">Family</a>
-                           <a href="training/civil-mediation-training.html" class="dropdown-item">Civil</a>
-                           <a href="training/family-civil-mediation-training.html" class="dropdown-item">Family to Civil</a>
-                           <a href="training/civil-family-mediation-training.html" class="dropdown-item">Civil to Family</a>
-                           <a href="training/domestice-violence-mediation-training.html" class="dropdown-item">Domestice
-                              Violence</a>
-                        </div>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                     </li>
-                  </ul>
-               </div>
-            </nav>
+             <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+                 <a class="navbar-brand" href="./">
+                     <h3>Law Office of</h3>
+                     <h1>Tusca R.S. Alexis</h1>
+                     <h3>Attorney at Law & Mediator</h3>
+                 </a>
+                 <button class="navbar-toggler" type="button" data-toggle="collapse"
+                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                     aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                 </button>
+                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                     <ul class="navbar-nav ml-auto">
+                         <li class="nav-item">
+                             <a class="nav-link" href="./">Home</a>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="/about.html">About</a>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="/training.html">Mediation Training</a>
+                         </li>
+                         <li class="nav-item">
+                             <a class="nav-link" href="/contact.html">Contact Us</a>
+                         </li>
+                     </ul>
+                 </div>
+             </nav>
          </div>
-         </div>
+     </div>
 
          <section class="mediation-content container my-5">
             <h2>Mediation Services by Attorney Tusca R. S. Alexis</h2>
@@ -109,7 +91,7 @@
                <li><strong>Mediation Sessions:</strong> During each session, Attorney Alexis will guide discussions, manage conflicts, and assist you in working toward a fair solution.</li>
                <li><strong>Agreement Drafting:</strong> If both parties agree, Attorney Alexis can draft a formal agreement for both parties to review and sign.</li>
             </ol>
-            
+            <div class="contact-info">
             <h3>Schedule a Mediation Session</h3>
             <p>If you are ready to resolve your disputes in a constructive, respectful environment, Attorney Tusca R. S. Alexis is here to help. Schedule a consultation today to explore how mediation can provide you with a fair, effective solution that protects your interests and relationships.</p>
             
@@ -120,6 +102,7 @@
                <li>Email: <a href="mailto:alexislawfirm@aol.com">alexislawfirm@aol.com</a></li>
                <li>Address: 301 S Perimeter Park Dr, Nashville, TN 37211</li>
             </ul>
+            </div>
          </section>
    
 
@@ -178,15 +161,14 @@
          </div>
       </div>
 
-      <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="/js/jquery.min.js"></script>
+      <script src="/js/popper.min.js"></script>
+      <script src="/js/bootstrap.bundle.min.js"></script>
+      <script src="/js/custom.js"></script>
+
       <script src="js/jquery-3.0.0.min.js"></script>
       <script src="js/plugin.js"></script>
-      <!-- sidebar -->
+
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
-      <!-- javascript --> 
    </body>
 </html>
