--- a/training/civil-family-mediation-training.html
+++ b/training/civil-family-mediation-training.html
@@ -264,13 +264,9 @@
             <img class="trainingLogo" src="/images/Alexis Mediation Logo_lght_bg.png" alt="Alexis Mediation">
         </div>
         <div class="col-md-12">
-            <h1 class="training-title">Civil Mediation Training Course</h1>
+            <h1 class="training-title">Family Mediation Training Course</h1>
             <p class="training-intro">
-                Join our comprehensive 40-hour Civil Mediation Training program, expertly led by Tusca R.S. Alexis. This
-                course is specifically designed for attorneys, professionals, and individuals interested in becoming
-                certified civil mediators in Tennessee. The training includes a blend of lectures, written exercises,
-                group discussions, and mediation simulations, providing participants with the practical skills needed to
-                effectively mediate civil disputes.
+                The Civil to Family Mediation Training is a comprehensive 30-hour course, spanning 4 days, that includes lectures, written exercises, group discussions, and hands-on mediation simulations. Throughout the course, participants will engage in role-playing exercises, taking turns acting as the mediator, plaintiff, defendant, or attorney. When acting as the mediator, participants will practice delivering opening statements and guiding disputes toward resolution or to a designated time limit. This role-playing experience aims to help participants build practical skills and confidence in mediation.
             </p>
 
             <h2 class="class-details-title">Class Details</h2>
@@ -281,7 +277,7 @@
                 <ul class="class-dates-list" id="weekend-2"><strong>Second Weekend:</strong></ul>
                 <li><strong>Location:</strong> Perimeter Park Executive Suites, 301 South Perimeter Park Drive,
                     Nashville, TN 37211</li>
-                <li><strong>Registration Fee:</strong> $1,035.39</li>
+                <li><strong>Registration Fee:</strong> $621.43</li>
                 <li><a class="paypal-button" href="#signup-form">Register</a></li>
             </ul>
 
@@ -289,12 +285,10 @@
 
             <h2 class="class-description-title">Class Description</h2>
             <p class="class-description">
-                Civil Mediation Training consists of lectures, written exercises, group discussions, and mediation
-                simulations. It is a 40 hour class comprised of 2 consecutive weekends. Each participant will be
-                involved in role play acting as the sole mediator, plaintiff, and defendant, or attorney. During the
-                role play (acting as mediator) the participant will be required to deliver opening statements and
-                mediate disputes to either resolution or a specific time limit. The objective of role play is for the
-                participant to develop experience and confidence acting as a mediator.
+                Throughout the training, participants will practice the role of mediator and other involved parties,
+                including plaintiff, defendant, and attorney, in various scenarios. As mediators, participants will
+                deliver opening statements and work to facilitate resolutions, building practical skills and confidence
+                in family mediation.
             </p>
 
             <h2 class="training-content-title">Training Covers:</h2>
@@ -303,18 +297,15 @@
                 <li>Community Resources and Referral Process</li>
                 <li>Court Process</li>
                 <li>Diversity Issues</li>
-                <li>Standards of Conduct for Mediators</li>
-                <li>Rule 31 Standards and Procedures</li>
-                <li>Conflict Resolution Concepts</li>
-                <li>Negotiation Dynamics</li>
-                <li>The Unrepresented Party</li>
-                <li>State Rules, State Statutes and Local Forms</li>
-                <li>Techniques for Mediating with Multiple Parties</li>
-                <li>Handling Situations Where Individuals Do Not Have Authority to Settle</li>
+                <li>Financial Issues</li>
+                <li>Tennessee Family Law</li>
+                <li>Psychological Issues in Divorce and Family Dynamics</li>
+                <li>Psychological Issues in Divorce and Separation - Family Dynamics</li>
+                <li>Issues Concerning Needs of Children in Divorce</li>
                 <li>And more...</li>
             </ul>
 
-            <h2 class="signup-title" id="signup-form">Sign Up for Civil Mediation Training</h2>
+            <h2 class="signup-title" id="signup-form">Sign Up for Domestic Violence Mediation Training</h2>
             <p class="signup-instructions">Please fill out the form below to register for the course. Once you click the
                 "Sign Up Now" button, you will be directed to PayPal to complete your registration and payment.
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
@@ -331,7 +322,7 @@
                     <input type="tel" class="form-control" id="phone" name="phone" required>
                 </div>
                 <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="WWNQH6YRDUMY2">
+                <input type="hidden" name="hosted_button_id" value="VGA48A9SLVC5J">
                 <button type="submit" class="paypal-button">Sign Up Now</button>
                 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" width="1"
                     height="1">
