--- a/training/domestic-violence-mediation-training.html
+++ b/training/domestic-violence-mediation-training.html
@@ -45,7 +45,7 @@
     font-size: 3rem;
     color: #34404c;
     text-align: center;
-    margin-top: 130px;
+    margin-top: 50px;
     font-weight: 700;
     padding: 0;
 }
@@ -167,7 +167,7 @@
         <div class="loader">
            <div class="header_section container">
               <div class="container">
-                 <nav class="navbar navbar-expand-lg navbar-light bg-light float-right">
+                 <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
                     <a class="navbar-brand" href="index.html">
                        <h3>Law Office of</h3>
                        <h1>Tusca R.S. Alexis</h1>
@@ -178,64 +178,49 @@
            </div>
         </div>
      </div>
-  
-     <div class="header_section parallax-section">
-        <div class="container">
-           <nav class="navbar navbar-expand-lg navbar-light bg-light float-right">
-              <a class="navbar-brand" href="./">
-                 <h3>Law Office of</h3>
-                 <h1>Tusca R.S. Alexis</h1>
-                 <h3>Attorney at Law & Mediator</h3>
+
+  <div class="header_section" style="padding-top: 120px;">
+      <div class="container">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+              <a class="navbar-brand" href="../">
+                  <h3>Law Office of</h3>
+                  <h1>Tusca R.S. Alexis</h1>
+                  <h3>Attorney at Law & Mediator</h3>
               </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
+              <button class="navbar-toggler" type="button" data-toggle="collapse"
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                       <a class="nav-link" href="../">Home</a>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link" href="/about.html">About</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                       <a class="nav-link dropdown-toggle" href="/practice-areas.html" id="practiceAreasDropdown"
-                          role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Practice
-                          Areas</a>
-                       <div class="dropdown-menu" aria-labelledby="practiceAreasDropdown">
-                          <a href="/family-law.html" class="dropdown-item">Family</a>
-                          <a href="/divorce.html" class="dropdown-item">Divorce & Post-Divorce</a>
-                          <a href="/custody.html" class="dropdown-item">Custody</a>
-                          <a href="/civil-law.html" class="dropdown-item">Civil</a>
-                          <a href="/criminal-law.html" class="dropdown-item">Criminal</a>
-                          <a href="/mediation.html" class="dropdown-item">Mediation</a>
-                       </div>
-                    </li>
-                    <li class="nav-item dropdown active">
-                       <a class="nav-link dropdown-toggle" href="/training.html" id="mediationDropdown" role="button"
-                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mediation
-                          Training</a>
-                       <div class="dropdown-menu" aria-labelledby="mediationDropdown">
-                          <a href="/training/family-mediation-training.html" class="dropdown-item">Family</a>
-                          <a href="/training/civil-mediation-training.html" class="dropdown-item">Civil</a>
-                          <a href="/training/family-civil-mediation-training.html" class="dropdown-item">Family to
-                             Civil</a>
-                          <a href="/training/civil-family-mediation-training.html" class="dropdown-item">Civil to
-                             Family</a>
-                          <a href="/training/domestic-violence-mediation-training.html" class="dropdown-item">domestic
-                             Violence</a>
-                       </div>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link" href="/contact.html">Contact Us</a>
-                    </li>
-                 </ul>
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                          <a class="nav-link" href="../">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="/about.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="/training.html">Mediation Training</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="/contact.html">Contact Us</a>
+                      </li>
+                  </ul>
               </div>
-           </nav>
+          </nav>
+      </div>
+  </div>
+
            <div class="training_container">
+            <div class="image-container">
+                <img class="trainingLogo" src="/images/Alexis Mediation Logo_lght_bg.png" alt="Alexis Mediation">
+            </div>
                <div class="col-md-12">
-                   <h1 class="training-title">Domestic Violence Mediation Training Course</h1>
+                   <h1 class="training-title">Domestic Violence<br>Mediation Training Course</h1>
                    <p class="training-intro">
                     The Domestic Violence Training program includes lectures, written exercises, case studies, group discussions, and mediation simulations. This comprehensive 12-hour course is held over one weekend (Friday, Saturday, or Sunday). Each participant will engage in hands-on exercises and case studies. Upon completion, participants will be equipped with skills to recognize and address the impact of domestic violence within the mediation process.
                    </p>
@@ -314,19 +299,17 @@
                    </p>
                </div>
            </div>
-        </div>
-     </div>
 
-    <!-- Javascript files-->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/jquery-3.0.0.min.js"></script>
-    <script src="/js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="/js/custom.js"></script>
-    <!-- javascript -->
+<!-- Javascript files-->
+<script src="/js/jquery.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/jquery-3.0.0.min.js"></script>
+<script src="/js/plugin.js"></script>
+<!-- sidebar -->
+<script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="/js/custom.js"></script>
+<!-- javascript -->
 </body>
 
 </html>
