--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="loader">
          <div class="header_section container">
             <div class="container">
-               <nav class="navbar navbar-expand-lg navbar-light bg-light float-right">
+               <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
                   <a class="navbar-brand" href="index.html">
                      <h3>Law Office of</h3>
                      <h1>Tusca R.S. Alexis</h1>
@@ -42,58 +42,37 @@
 
    <div class="header_section parallax-section">
       <div class="container">
-         <nav class="navbar navbar-expand-lg navbar-light bg-light float-right">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
             <a class="navbar-brand" href="./">
-               <h3>Law Office of</h3>
-               <h1>Tusca R.S. Alexis</h1>
-               <h3>Attorney at Law & Mediator</h3>
+                <h3>Law Office of</h3>
+                <h1>Tusca R.S. Alexis</h1>
+                <h3>Attorney at Law & Mediator</h3>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active">
-                     <a class="nav-link" href="./">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="/about.html">About</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="/practice-areas.html" id="practiceAreasDropdown"
-                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Practice
-                        Areas</a>
-                     <div class="dropdown-menu" aria-labelledby="practiceAreasDropdown">
-                        <a href="/family-law.html" class="dropdown-item">Family</a>
-                        <a href="/divorce.html" class="dropdown-item">Divorce & Post-Divorce</a>
-                        <a href="/custody.html" class="dropdown-item">Custody</a>
-                        <a href="/civil-law.html" class="dropdown-item">Civil</a>
-                        <a href="/criminal-law.html" class="dropdown-item">Criminal</a>
-                        <a href="/mediation.html" class="dropdown-item">Mediation</a>
-                     </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="/training.html" id="mediationDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mediation
-                        Training</a>
-                     <div class="dropdown-menu" aria-labelledby="mediationDropdown">
-                        <a href="/training/family-mediation-training.html" class="dropdown-item">Family</a>
-                        <a href="/training/civil-mediation-training.html" class="dropdown-item">Civil</a>
-                        <a href="/training/family-civil-mediation-training.html" class="dropdown-item">Family to
-                           Civil</a>
-                        <a href="/training/civil-family-mediation-training.html" class="dropdown-item">Civil to
-                           Family</a>
-                        <a href="/training/domestic-violence-mediation-training.html" class="dropdown-item">domestic
-                           Violence</a>
-                     </div>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="/contact.html">Contact Us</a>
-                  </li>
-               </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/training.html">Mediation Training</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                    </li>
+                </ul>
             </div>
-         </nav>
+        </nav>
          <div class="banner_section layout_padding">
             <div class="container-fluid">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
@@ -108,7 +87,7 @@
                                     civil, and
                                     community matters, specializing in conflict resolution and negotiations.</p>
                                  <div class="readmore_btn active"><a class="btn btn-primary"
-                                       href="/mediation.html">Learn
+                                       href="/practiceAreas/mediation.html">Learn
                                        More</a></div>
                                  <div class="started_bt"><a class="btn btn-secondary" href="/contact.html">Contact
                                        Us</a>
@@ -128,7 +107,7 @@
                                     law
                                     matters, including divorce, custody, and support issues.</p>
                                  <div class="readmore_btn active"><a class="btn btn-primary"
-                                       href="/famly-law.html">Learn
+                                       href=/practiceAreas/family-law.html>Learn
                                        More</a></div>
                                  <div class="started_bt"><a class="btn btn-secondary" href="/contact.html">Contact
                                        Us</a>
@@ -147,7 +126,7 @@
                                     matters,
                                     and resolution services tailored to individuals and businesses.</p>
                                  <div class="readmore_btn active"><a class="btn btn-primary"
-                                       href="/civil-law.html">Learn More</a></div>
+                                       href="/practiceAreas/civil-law.html">Learn More</a></div>
                                  <div class="started_bt"><a class="btn btn-secondary" href="/contact.html">Contact
                                        Us</a>
                                  </div>
@@ -165,8 +144,23 @@
                                     mediate
                                     conflicts
                                     in various settings, from community to corporate environments.</p>
-                                 <div class="readmore_btn active"><a class="btn btn-primary"
-                                       href="/training.html">Learn
+                                 <div class="readmore_btn active"><a class="btn btn-primary" href="/training.html">Learn
+                                       More</a></div>
+                                 <div class="started_bt"><a class="btn btn-secondary" href="/contact.html">Contact
+                                       Us</a>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="carousel-item">
+                        <div class="row">
+                           <div class="col-md-12">
+                              <div class="banner_taital_main">
+                                 <h1 class="banner_taital">Immigration Law</h1>
+                                 <p class="col-md-6 banner_text">Our immigration law services encompass visa applications, green cards, naturalization, and citizenship. We are dedicated to helping clients navigate the complexities of immigration law with personalized guidance and strong advocacy at every step.</p>
+                                 <div class="readmore_btn active"><a class="btn btn-primary" href="/practiceAreas/immigration-law.html">Learn
                                        More</a></div>
                                  <div class="started_bt"><a class="btn btn-secondary" href="/contact.html">Contact
                                        Us</a>
@@ -258,7 +252,7 @@
                                  marriage, custody, and child support issues, while prioritizing the best interests of
                                  the family.
                               </p>
-                              <div class="readmore_button"><a href="/family-law.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/family-law.html">Read More</a></div>
                            </div>
                         </div>
 
@@ -269,7 +263,8 @@
                                  We specialize in handling divorce cases and post-divorce disputes, ensuring that your
                                  rights are protected and your future is secure as you move forward.
                               </p>
-                              <div class="readmore_button active"><a href="/divorce.html">Read More</a></div>
+                              <div class="readmore_button active"><a href="/practiceAreas/divorce.html">Read More</a>
+                              </div>
                            </div>
                         </div>
 
@@ -280,7 +275,7 @@
                                  We assist in resolving custody disputes, advocating for the best interests of the child
                                  while ensuring parental rights are protected.
                               </p>
-                              <div class="readmore_button"><a href="/custody">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/custody.html">Read More</a></div>
                            </div>
                         </div>
 
@@ -297,7 +292,8 @@
                                  We represent clients in a wide range of criminal cases, ensuring a strong defense and
                                  protecting your legal rights.
                               </p>
-                              <div class="readmore_button"><a href="/criminal.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/criminal-law.html">Read More</a>
+                              </div>
                            </div>
                         </div>
 
@@ -308,7 +304,7 @@
                                  If you’ve been injured due to someone else's negligence, we fight to get you the
                                  compensation you deserve for medical bills, lost wages, and more.
                               </p>
-                              <div class="readmore_button"><a href="/civil.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/civil-law.html">Read More</a></div>
                            </div>
                         </div>
 
@@ -319,7 +315,7 @@
                                  We handle medical malpractice cases to ensure you receive justice for injuries caused
                                  by healthcare providers’ negligence.
                               </p>
-                              <div class="readmore_button"><a href="/civil.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/civil-law.html">Read More</a></div>
                            </div>
                         </div>
                      </div>
@@ -335,18 +331,17 @@
                                  We provide legal support for families affected by wrongful death, helping them seek
                                  compensation and accountability for their loss.
                               </p>
-                              <div class="readmore_button"><a href="/civil.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/civil-law.html">Read More</a></div>
                            </div>
                         </div>
 
                         <div class="col-md-4">
                            <div class="service_box">
-                              <h3 class="corporate_text">Contract Disputes</h3>
+                              <h3 class="corporate_text">Immigration</h3>
                               <p class="chunks_text">
-                                 We handle contract disputes and ensure that your rights are enforced, providing strong
-                                 representation for breach of contract cases.
+                                 Our immigration law services encompass visa applications, green cards, naturalization, and citizenship. We are dedicated to helping clients navigate the complexities of immigration law with personalized guidance and strong advocacy at every step.
                               </p>
-                              <div class="readmore_button"><a href="/civil.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/immigration-law.html">Read More</a></div>
                            </div>
                         </div>
 
@@ -357,7 +352,7 @@
                                  Whether you’re a landlord or a tenant, we offer legal assistance in resolving disputes
                                  and protecting your interests.
                               </p>
-                              <div class="readmore_button"><a href="/civil.html">Read More</a></div>
+                              <div class="readmore_button"><a href="/practiceAreas/civil-law.html">Read More</a></div>
                            </div>
                         </div>
                      </div>
@@ -400,20 +395,20 @@
       <div class="container">
          <div class="row">
             <div class="col-sm-12">
-               <h1 class="contact_taital">Free Consultation</h1>
+               <h1 class="contact_taital">Have questions? We can help</h1>
             </div>
          </div>
          <div class="contact_section_2">
             <div class="row">
                <div class="col-md-12">
                   <div class="mail_section map_form_container">
-                     <form action="POST">
+                     <form action="https://formspree.io/f/xnnqdaqp" method="POST">
                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
                         <input type="text" class="mail_text" placeholder="Your Email" name="Your Email">
                         <textarea class="message-bt" placeholder="Message" rows="5" id="comment"
                            name="Message"></textarea>
-                        <div class="send_bt active"><a href="#">Send Now</a></div>
+                        <button type="submit" class="send_bt">Send Message</button>
                      </form>
                   </div>
                </div>
