--- a/moreabout.html
+++ b/moreabout.html
@@ -24,46 +24,42 @@
  </head>
 
 <body>
-    <div class="header_section">
-        <div class="container-fluid">
-           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">
-                <h3>Law Office of</h3>
-                <h1>Tusca R.S. Alexis</h1>
-                <h3>Mediation Training and Services</h3>
-                <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
-             </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                       <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item active">
-                       <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="practice-areas.html">Practice Areas</a>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link" href="mediation.html">Mediation</a>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link" href="training.html">Mediation Training</a>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                 </ul>
-              </div>
-           </nav>
+    <div class="header_section" style="padding-top: 120px;">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+                <a class="navbar-brand" href="./">
+                    <h3>Law Office of</h3>
+                    <h1>Tusca R.S. Alexis</h1>
+                    <h3>Attorney at Law & Mediator</h3>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/training.html">Mediation Training</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-     </div>
-     <!-- header section end -->
-    <!-- about section start -->
+    </div>
+
     <div class="about_section">
         <div class="container">
             <div class="row">
