--- a/practiceAreas/civil-law.html
+++ b/practiceAreas/civil-law.html
@@ -25,7 +25,7 @@
     <div class="header_section" style="padding-top: 120px;">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
-                <a class="navbar-brand" href="./">
+                <a class="navbar-brand" href="../">
                     <h3>Law Office of</h3>
                     <h1>Tusca R.S. Alexis</h1>
                     <h3>Attorney at Law & Mediator</h3>
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./">Home</a>
+                            <a class="nav-link" href="../">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about.html">About</a>
@@ -56,12 +56,12 @@
                 </div>
             </nav>
         </div>
-    </div>  
+    </div> 
     
-    <section class="divorce-content container my-5">
-        <h2>Divorce & Post-Divorce Services</h2>
-        <p>Attorney Alexis provides comprehensive divorce and post-divorce legal services to help clients through these life changes...</p>
-        <!-- Additional content specific to divorce and post-divorce -->
+    <section class="civil-content container my-5">
+        <h2>Civil Law Services</h2>
+        <p>Attorney Tusca R. S. Alexis provides skilled representation in civil law matters, from property disputes to contract issues...</p>
+        <!-- Additional content specific to civil law -->
     </section>
 
     <div class="footer_section layout_padding">
