--- a/training/family-civil-mediation-training.html
+++ b/training/family-civil-mediation-training.html
@@ -2,161 +2,234 @@
 <html>
 
 <head>
+    <!-- basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- mobile metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- site metas -->
     <title>Civil Mediation Training</title>
     <meta name="keywords" content="Mediation Training, Family Law, Tennessee Mediator Certification">
     <meta name="description"
         content="Join our 46-hour Family Mediation Training program led by Tusca R.S. Alexis for aspiring family mediators.">
     <meta name="author" content="">
+    <!-- bootstrap css -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <!-- style css -->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!-- Responsive-->
     <link rel="stylesheet" href="/css/responsive.css">
+    <!-- fevicon -->
     <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <!-- font css -->
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
+    <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css">
+    <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-<style>
- /* General Container */
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #faf9f6;
-}
+    <style>
+        /* General Container */
+        .training_container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            width: 100%;
+            box-sizing: border-box;
+            background-color: #faf9f6;
+        }
 
-/* Titles */
-.training-title {
-    font-size: 3rem;
-    color: #34404c;
-    text-align: center;
-    margin-top: 130px;
-    font-weight: 700;
-    padding: 0;
-}
+        /* Titles */
+        .training-title {
+            font-size: 3rem;
+            color: #34404c;
+            text-align: center;
+            margin-top: 50px;
+            font-weight: 700;
+            padding: 0;
+        }
 
-.class-details-title, .class-description-title, .training-content-title, .signup-title, .payment-info-title {
-    font-size: 2rem;
-    color: #2980b9;
-    margin-top: 40px;
-    margin-bottom: 15px;
-    border-bottom: 2px solid #dcdcdc;
-    padding-bottom: 10px;
-}
+        .class-details-title,
+        .class-description-title,
+        .training-content-title,
+        .signup-title,
+        .payment-info-title {
+            font-size: 2rem;
+            /* Slightly smaller than the main title */
+            color: #2980b9;
+            /* Blue for emphasis */
+            margin-top: 40px;
+            /* Space above each section */
+            margin-bottom: 15px;
+            /* Space below each section */
+            border-bottom: 2px solid #dcdcdc;
+            /* Underline for separation */
+            padding-bottom: 10px;
+            /* Space below the title */
+        }
 
-.training-intro, .class-description, .payment-info {
-    font-size: 1.1rem;
-    line-height: 1.6;
-    color: #34495e;
-    margin-bottom: 20px;
-}
+        /* Intro Paragraph */
+        .training-intro,
+        .class-description,
+        .payment-info {
+            font-size: 1.1rem;
+            /* Slightly larger for better readability */
+            line-height: 1.6;
+            /* Increased line height */
+            color: #34495e;
+            /* Soft black for text */
+            margin-bottom: 20px;
+            /* Space below paragraphs */
+        }
 
-.class-details-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    max-width: 800px;
-    margin: 0 auto;
-}
+        /* Class Details */
+        .class-details-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            max-width: 800px;
+            margin: 0 auto;
+        }
 
-.class-details-list li {
-    padding: 15px;
-    border-bottom: 1px solid #dcdcdc;
-    transition: background-color 0.3s;
-}
+        .class-details-list li {
+            padding: 15px;
+            border-bottom: 1px solid #dcdcdc;
+            transition: background-color 0.3s;
+        }
 
-.training-content-list li{
-    list-style-type: disc;
-    padding-left: 0px;
-    color: #34495e;
-}
+        /* Training Content List */
+        .training-content-list li {
+            list-style-type: disc;
+            /* Disc bullets for training content */
+            padding-left: 0px;
+            /* Indent for readability */
+            color: #34495e;
+            /* Consistent color for text */
+        }
 
-.form-group {
-    margin-bottom: 20px;
-}
+        /* Form Styles */
+        .form-group {
+            margin-bottom: 20px;
+            /* Space between form groups */
+        }
 
-.form-label {
-    font-weight: 600;
-    color: #2c3e50;
-}
+        .form-label {
+            font-weight: 600;
+            /* Bold labels */
+            color: #2c3e50;
+            /* Deep navy */
+        }
 
-.form-control {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #dcdcdc;
-    border-radius: 5px;
-    transition: border-color 0.3s;
-}
+        .form-control {
+            width: 100%;
+            /* Full width inputs */
+            padding: 10px;
+            /* Inner space */
+            border: 1px solid #dcdcdc;
+            /* Light border */
+            border-radius: 5px;
+            /* Rounded corners */
+            transition: border-color 0.3s;
+            /* Smooth border transition */
+        }
 
-.form-control:focus {
-    border-color: #2980b9;
-    outline: none;
-}
+        .form-control:focus {
+            border-color: #2980b9;
+            /* Blue border on focus */
+            outline: none;
+            /* Remove outline */
+        }
 
-/* PayPal Button */
-.paypal-button {
-    background-color: #FFC439;
-    color: #111;
-    font-family: "Poppins", sans-serif;
-    text-align: center;
-    font-size: 18px;
-    border: none;
-    padding: 12px 30px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: inline-block;
-}
+        /* PayPal Button */
+        .paypal-button {
+            background-color: #FFC439;
+            /* PayPal yellow */
+            color: #111;
+            /* Text color */
+            font-family: "Poppins", sans-serif;
+            /* Clean font */
+            text-align: center;
+            font-size: 18px;
+            /* Font size */
+            border: none;
+            /* No border */
+            padding: 12px 30px;
+            /* Space inside button */
+            border-radius: 5px;
+            /* Rounded button */
+            cursor: pointer;
+            /* Pointer on hover */
+            transition: background-color 0.3s;
+            /* Smooth transition */
+            display: inline-block;
+            /* Align button nicely */
+        }
 
-.paypal-button:hover {
-    background-color: #FFB400;
-}
+        .paypal-button:hover {
+            background-color: #FFB400;
+            /* Darker yellow on hover */
+        }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    .container {
-        padding: 10px;
-    }
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+                /* Less padding on mobile */
+            }
 
-    .training-title {
-        font-size: 2.5rem;
-    }
+            .training-title {
+                font-size: 2.5rem;
+                /* Smaller title for mobile */
+            }
 
-    .training-title,
-    .class-details-title,
-    .class-description-title,
-    .training-content-title,
-    .signup-title,
-    .payment-info-title {
-        font-size: 1.5rem;
-    }
+            .training-title,
+            .class-details-title,
+            .class-description-title,
+            .training-content-title,
+            .signup-title,
+            .payment-info-title {
+                font-size: 1.5rem;
+                /* Smaller subtitles on mobile */
+            }
 
-    .form-control {
-        font-size: 1rem;
-    }
+            .form-control {
+                font-size: 1rem;
+                /* Adjust input font size */
+            }
 
-    .paypal-button {
-        width: 100%;
-    }
-}
-
-</style>
+            .paypal-button {
+                width: 100%;
+                /* Full width button on mobile */
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <div class="header_section">
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="index.html">
+    <div id="preloader">
+        <div class="loader">
+           <div class="header_section container">
+              <div class="container">
+                 <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+                    <a class="navbar-brand" href="index.html">
+                       <h3>Law Office of</h3>
+                       <h1>Tusca R.S. Alexis</h1>
+                       <h3>Attorney at Law & Mediator</h3>
+                    </a>
+                 </nav>
+              </div>
+           </div>
+        </div>
+     </div>
+
+    <div class="header_section" style="padding-top: 120px;">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
+                <a class="navbar-brand" href="../">
                     <h3>Law Office of</h3>
                     <h1>Tusca R.S. Alexis</h1>
-                    <h3>Mediation Training and Services</h3>
-                    <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
+                    <h3>Attorney at Law & Mediator</h3>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -164,32 +237,31 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="../">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../about.html">About</a>
+                            <a class="nav-link" href="/about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="mediation.html">Mediation</a>
+                            <a class="nav-link" href="/practice-areas.html">Practice Areas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="practice-areas.html">Practice Areas</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="training.html">Mediation Training</a>
+                            <a class="nav-link" href="/training.html">Mediation Training</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
+                            <a class="nav-link" href="/contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </div>
-    <!-- header section end -->
-    <div class="container">
+    <div class="training_container">
+        <div class="image-container">
+            <img class="trainingLogo" src="/images/Alexis Mediation Logo_lght_bg.png" alt="Alexis Mediation">
+        </div>
         <!-- Title Section -->
         <div class="col-md-12">
             <h1 class="training-title">Family to Civil Mediation Training Course</h1>
@@ -276,14 +348,14 @@
     
 
     <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/jquery-3.0.0.min.js"></script>
+    <script src="/js/plugin.js"></script>
     <!-- sidebar -->
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="/js/custom.js"></script>
     <!-- javascript -->
 </body>
 
