--- a/training.html
+++ b/training.html
@@ -140,7 +140,9 @@
                   <div class="location_text">
                      <ul>
                         <li>
-                           <a target="_new" href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/@36.0836923,-86.6996681,17z/data=!3m1!4b1!4m5!3m4!1s0x88646e5439329a9b:0x1b039b85e5a50caf!8m2!3d36.0836923!4d-86.6974794"><i class="fa fa-map-marker" aria-hidden="true"></i></a>
+                           <a target="_new"
+                              href="https://www.google.com/maps/place/301+S+Perimeter+Park+Dr+%23100,+Nashville,+TN+37211/@36.0836923,-86.6996681,17z/data=!3m1!4b1!4m5!3m4!1s0x88646e5439329a9b:0x1b039b85e5a50caf!8m2!3d36.0836923!4d-86.6974794"><i
+                                 class="fa fa-map-marker" aria-hidden="true"></i></a>
                         </li>
                         <li>
                            <a href="tel:615-828-4087"><i class="fa fa-phone" aria-hidden="true"></i></a>
@@ -155,35 +157,45 @@
                   <a class="navbar-brand" href="index.html">
                      <h3>Law Office of</h3>
                      <h1>Tusca R.S. Alexis</h1>
-                     <h3>Mediation Training and Services</h3>
+                     <h3>Attorney at Law & Mediator</h3>
                      <!--<img src="images/logo-tusca-alexis.png" alt="Alexis Mediation Logo" width="250">-->
                   </a>
                </div>
                <div class="social_icon">
                   <ul>
-                     <li><a href="https://www.facebook.com/p/Tusca-Alexis-61551910778340/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                     <li><a href="https://www.instagram.com/tuscaalexis4judge/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                     <li><a href="https://www.facebook.com/p/Tusca-Alexis-61551910778340/" target="_blank"><i
+                              class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                     <li><a href="https://www.instagram.com/tuscaalexis4judge/" target="_blank"><i class="fa fa-instagram"
+                              aria-hidden="true"></i></a></li>
                   </ul>
                </div>
             </div>
          </div>
+         <div id="google_translate_element" style="text-align: center;"></div>
       </div>
-
+   
+      <script type="text/javascript">
+         function googleTranslateElementInit() {
+            new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+         }
+      </script>
+   
+      <script type="text/javascript"
+         src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+   
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2024 All Rights Reserved.</p>
+            <p class="copyright_text">© 2024 All Rights Reserved.</p>
          </div>
       </div>
-      <!-- copyright section end -->
-      <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
       <script src="js/plugin.js"></script>
-      <!-- sidebar -->
+
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
-      <!-- javascript --> 
+
    </body>
 </html>
