--- a/practiceAreas/family-law.html
+++ b/practiceAreas/family-law.html
@@ -25,7 +25,7 @@
     <div class="header_section" style="padding-top: 120px;">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light float-right fixed-top">
-                <a class="navbar-brand" href="./">
+                <a class="navbar-brand" href="../">
                     <h3>Law Office of</h3>
                     <h1>Tusca R.S. Alexis</h1>
                     <h3>Attorney at Law & Mediator</h3>
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./">Home</a>
+                            <a class="nav-link" href="../">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about.html">About</a>
